@@ -34,7 +34,7 @@ local DRData = LibStub("DRData-1.0", true)
 TELLMEWHEN_VERSION = "4.5.0"
 TELLMEWHEN_VERSION_MINOR = strmatch(" @project-version@", " r%d+") or ""
 TELLMEWHEN_VERSION_FULL = TELLMEWHEN_VERSION .. TELLMEWHEN_VERSION_MINOR
-TELLMEWHEN_VERSIONNUMBER = 45002 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL
+TELLMEWHEN_VERSIONNUMBER = 45004 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL
 if TELLMEWHEN_VERSIONNUMBER > 46000 or TELLMEWHEN_VERSIONNUMBER < 45000 then return error("YOU SCREWED UP THE VERSION NUMBER OR DIDNT CHANGE THE SAFETY LIMITS") end -- safety check because i accidentally made the version number 414069 once
 
 TELLMEWHEN_MAXGROUPS = 1 	--this is a default, used by SetTheory (addon), so dont rename
@@ -70,15 +70,18 @@ local clientVersion = select(4, GetBuildInfo())
 local _, pclass = UnitClass("Player")
 
 TMW.Print = TMW.Print or _G.print
-TMW.Warn = setmetatable({}, {__call = function(tbl, text)
-	if TMW.Warned then
-		TMW:Print(text)
-	elseif not TMW.tContains(tbl, text) then
-		tinsert(tbl, text)
-	end
+TMW.Warn = setmetatable(
+{}, {
+	__call = function(tbl, text)
+		if TMW.Warned then
+			TMW:Print(text)
+		elseif not TMW.tContains(tbl, text) then
+			tinsert(tbl, text)
+		end
 end})
 
-TMW.strlowerCache = setmetatable({}, {
+TMW.strlowerCache = setmetatable(
+{}, {
 	__index = function(t, i)
 		if not i then return end
 		local o
@@ -113,6 +116,14 @@ TMW.SpellTextures = setmetatable(
 		return t[i]
 	end,
 }) local SpellTextures = TMW.SpellTextures
+
+TMW.isNumber = setmetatable(
+{}, {
+	__index = function(t, i)
+		local o = tonumber(i) or false
+		t[i] = o
+		return o
+end})
 
 TMW.Icons = {}
 TMW.IconsLookup = {}
@@ -1881,14 +1892,8 @@ function TMW:LoadOptions(n)
 			geterrorhandler()(err, 0) -- non breaking error
 		end
 	else
-		for k, v in pairs(INTERFACEOPTIONS_ADDONCATEGORIES) do
-			if v.name == "TellMeWhen" and not v.obj then
-				tremove(INTERFACEOPTIONS_ADDONCATEGORIES, k)
-				InterfaceAddOnsList_Update()
-				break
-			end
-		end
 		TMW:CompileOptions()
+		collectgarbage()
 	end
 end
 
